tests/rosetta/out/Fortran/chernicks-carmichael-numbers.error
gfortran: exit status 1
/tmp/chernicks-carmichael-numbers.f90:56:8:

   56 |       a = a(1:(n - 1))
      |        1
Error: ‘a’ at (1) is not a variable
/tmp/chernicks-carmichael-numbers.f90:59:11:

   59 |     res = a
      |           1
Error: Function ‘a’ requires an argument list at (1)
/tmp/chernicks-carmichael-numbers.f90:88:13:

   88 |     allocate(res(0))
      |             1
Error: Allocate-object at (1) is neither a data pointer nor an allocatable variable
/tmp/chernicks-carmichael-numbers.f90:140:16:

  140 |       res = (//)
      |                1
Error: Empty array constructor at (1) is not allowed
/tmp/chernicks-carmichael-numbers.f90:146:16:

  146 |       res = (//)
      |                1
Error: Empty array constructor at (1) is not allowed
/tmp/chernicks-carmichael-numbers.f90:154:18:

  154 |         res = (//)
      |                  1
Error: Empty array constructor at (1) is not allowed
/tmp/chernicks-carmichael-numbers.f90:168:7:

  168 |       m = 1
      |       1
Error: Symbol ‘m’ at (1) has no IMPLICIT type
/tmp/chernicks-carmichael-numbers.f90:166:5:

  166 |     n = start
      |     1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
/tmp/chernicks-carmichael-numbers.f90:112:53:

  112 |   recursive character(len=100) function bigToString(a) result(res)
      |                                                     1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘a’ at (1)
/tmp/chernicks-carmichael-numbers.f90:81:42:

   81 |   recursive integer function bigMulSmall(a,m) result(res)
      |                                          1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘a’ at (1)
/tmp/chernicks-carmichael-numbers.f90:69:5:

   69 |     n = x
      |     1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
/tmp/chernicks-carmichael-numbers.f90:52:38:

   52 |   recursive integer function bigTrim(a) result(res)
      |                                      1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘a’ at (1)
/tmp/chernicks-carmichael-numbers.f90:54:5:

   54 |     n = size(a)
      |     1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
/tmp/chernicks-carmichael-numbers.f90:174:18:

  174 |         if ((size(num) > 0)) then
      |                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/chernicks-carmichael-numbers.f90:176:67:

  176 |           print *, trim(trim('a(' // s4) // ') = ') // bigToString(num)
      |                                                                   1
Error: Expected a procedure for argument ‘a’ at (1)
/tmp/chernicks-carmichael-numbers.f90:115:14:

  115 |     i = (size(a) - 1)
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/chernicks-carmichael-numbers.f90:118:11:

  118 |       s = (s + s3)
      |           1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/chernicks-carmichael-numbers.f90:65:6:

   65 |       res = (/0/)
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/chernicks-carmichael-numbers.f90:78:4:

   78 |     res = digits
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/chernicks-carmichael-numbers.f90:149:23:

  149 |     prod = bigMulSmall(prod,p)
      |                       1
Error: Expected a procedure for argument ‘a’ at (1)
/tmp/chernicks-carmichael-numbers.f90:85:6:

   85 |       res = (/0/)
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/chernicks-carmichael-numbers.f90:94:25:

   94 |       allocate(app1(size(res)+1))
      |                         1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/chernicks-carmichael-numbers.f90:95:18:

   95 |       app1(1:size(res)) = res
      |                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/chernicks-carmichael-numbers.f90:96:16:

   96 |       app1(size(res)+1) = mod(prod,10)
      |                1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/chernicks-carmichael-numbers.f90:97:6:

   97 |       res = app1
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/chernicks-carmichael-numbers.f90:91:24:

   91 |     do while ((i < size(a)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/chernicks-carmichael-numbers.f90:103:25:

  103 |       allocate(app2(size(res)+1))
      |                         1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/chernicks-carmichael-numbers.f90:104:18:

  104 |       app2(1:size(res)) = res
      |                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/chernicks-carmichael-numbers.f90:105:16:

  105 |       app2(size(res)+1) = mod(carry,10)
      |                1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/chernicks-carmichael-numbers.f90:106:6:

  106 |       res = app2
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/chernicks-carmichael-numbers.f90:109:18:

  109 |     res = bigTrim(res)
      |                  1
Error: Expected a procedure for argument ‘a’ at (1)
/tmp/chernicks-carmichael-numbers.f90:54:13:

   54 |     n = size(a)
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/chernicks-carmichael-numbers.f90:157:25:

  157 |       prod = bigMulSmall(prod,p)
      |                         1
Error: Expected a procedure for argument ‘a’ at (1)
/tmp/chernicks-carmichael-numbers.f90:151:15:

  151 |     do while (((i <= n) - 2))
      |               1
Error: Operands of binary numeric operator ‘-’ at (1) are LOGICAL(4)/INTEGER(4)
